All interview tasks are completed